--- a/template.yaml
+++ b/template.yaml
@@ -8,27 +8,26 @@ Description: >
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
-    Timeout: 3
-
+    Timeout: 30
     Tracing: Active
   Api:
     TracingEnabled: true
 Resources:
-  HelloWorldFunction:
+  ABCRendererFunction:
     Type: AWS::Serverless::Function
     Properties:
       PackageType: Image
       Architectures:
       - x86_64
       Events:
-        HelloWorld:
+        ABCRenderer:
           Type: Api
           Properties:
-            Path: /hello
+            Path: /render
             Method: get
     Metadata:
       DockerTag: nodejs20.x-v1
-      DockerContext: ./hello-world
+      DockerContext: ./abc-renderer
       Dockerfile: Dockerfile
 
   ApplicationResourceGroup:
@@ -48,12 +47,12 @@ Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: API Gateway endpoint URL for Prod stage for Hello World function
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: Hello World Lambda Function ARN
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: Implicit IAM Role created for Hello World function
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+  ABCRendererApi:
+    Description: API Gateway endpoint URL for Prod stage for ABC Renderer function
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/abcrenderer/"
+  ABCRendererFunction:
+    Description: ABCRenderer Lambda Function ARN
+    Value: !GetAtt ABCRendererFunction.Arn
+  ABCRendererFunctionIamRole:
+    Description: Implicit IAM Role created for ABCRenderer function
+    Value: !GetAtt ABCRendererFunctionRole.Arn
