--- a/abc-renderer/package.json
+++ b/abc-renderer/package.json
@@ -7,7 +7,9 @@
   "author": "Adam Feuer",
   "license": "MIT",
   "dependencies": {
-    "axios": ">=1.6.0"
+    "axios": ">=1.6.0",
+    "abcjs": "^6.4.4",
+    "jsdom": "^25.0.1"
   },
   "scripts": {
     "test": "mocha tests/unit/"
